Fix error when PlayAgainWindow triggered in single player mode